--- a/pytissueoptics/rayscattering/opencl/config.json
+++ b/pytissueoptics/rayscattering/opencl/config.json
@@ -1,4 +1,6 @@
 {
   "N_WORK_UNITS": 10000,
-  "MAX_MEMORY_MB": 1024
+  "MAX_MEMORY_MB": 1024,
+  "IPP_TEST_N_PHOTONS": 1000,
+  "BATCH_LOAD_FACTOR": 0.20
 }
