--- a/pytissueoptics/rayscattering/opencl/config.json
+++ b/pytissueoptics/rayscattering/opencl/config.json
@@ -1,5 +1,5 @@
 {
-  "N_WORK_UNITS": 10000,
+  "N_WORK_UNITS": null,
   "MAX_MEMORY_MB": 1024,
   "IPP_TEST_N_PHOTONS": 1000,
   "BATCH_LOAD_FACTOR": 0.20
