--- a/pytissueoptics/rayscattering/opencl/config.json
+++ b/pytissueoptics/rayscattering/opencl/config.json
@@ -1,7 +1,7 @@
 {
-    "DEVICE_INDEX": 0,
-    "MAX_MEMORY_MB": 1024,
-    "N_WORK_UNITS": 32,
+    "DEVICE_INDEX": null,
+    "MAX_MEMORY_MB": null,
+    "N_WORK_UNITS": null,
     "BATCH_LOAD_FACTOR": 0.2,
     "IPP_TEST_N_PHOTONS": 1000
 }
