--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,5 @@ pytissueoptics/rayscattering/tests/_trial_temp/_trial_marker
 pytissueoptics/rayscattering/opencl/config.json
 pytissueoptics/rayscattering/opencl/ipp.json
 .vscode/settings.json
+
+.DS_Store
