--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -42,8 +42,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install setuptools>=40.8.0 wheel pytest
-          python -m pip install .
+          python -m pip install -e .[dev]
           python -m pip freeze --all
 
       - name: Validate OpenCL
