--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ authors = [
 license = "MIT"
 license-files = ["LICENSE"]
 requires-python = ">=3.9"
+dynamic = ["version"]
 dependencies = [
   "numpy>=2.0.0",
   "matplotlib",
