--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,6 +1,11 @@
 name: Lint
 
-on: [ pull_request, workflow_dispatch ]
+on:
+    pull_request:
+    push:
+      branches:
+        - main
+    workflow_dispatch:
 
 jobs:
   lint:
