--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -1,6 +1,11 @@
 name: Test Coverage
 
-on: [ pull_request, workflow_dispatch ]
+on:
+    pull_request:
+    push:
+      branches:
+        - main
+    workflow_dispatch:
 
 jobs:
   test:
