ci: add weekly schedule to tests workflow

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,6 +5,8 @@ on:
     push:
       branches:
         - main
+    schedule:
+      - cron: "0 20 * * 4"  # Every Thursday @ 20:00 UTC (15:00 EST)
     workflow_dispatch:
 
 jobs:
